<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8f4f8"
    android:padding="16dp">

    <Button
        android:id="@+id/btnback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:background="@drawable/back"
        android:onClick="back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="45sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/SignIn"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="40sp" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/usernamehint" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailhint"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordhint"/>

    <EditText
        android:id="@+id/etReenterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/re_enter_password"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="save"
        android:background="#44a6c6"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logintext"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:onClick="login"/>
</LinearLayout>