<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/LogIn" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/username" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/usernamehint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/passwordhint" />

    <Button
        android:id="@+id/in"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFD180"
        android:text="@string/LogIn"
        android:textColor="@color/black"
        android:textSize="30sp" />

</LinearLayout>