<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0E7E7"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/ps" />

    <Button
        android:id="@+id/log"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:backgroundTint="#FFD180"
        android:text="@string/LogIn"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sign"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFD180"
        android:text="@string/SignIn"
        android:textColor="@color/black"
        android:textSize="30sp" />

</LinearLayout>

