<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="blod"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <TextView
        android:fontFamily="sans-serif-condensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/ps"
        android:textColor="#000000"
        android:textSize="45sp" />


    <Button
        android:id="@+id/G1"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn"
        android:drawableStart="@drawable/btn"
        android:text="@string/Plane"
        android:textSize="30sp" />

    <Button
        android:id="@+id/G2"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn"
        android:drawableStart="@drawable/btn"
        android:text="@string/Fish"
        android:textSize="30sp" />

    <Button
        android:id="@+id/G3"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn"
        android:drawableStart="@drawable/btn"
        android:text="@string/num"
        android:textSize="30sp" />

    <Button
        android:id="@+id/G4"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn"
        android:drawableStart="@drawable/btn"
        android:text="@string/Std"
        android:textSize="30sp" />


</LinearLayout>