<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    >

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/restart"
        android:onClick="restart"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/exit"
        android:onClick="exit"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:textColor="#000000"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tvName"
            android:textSize="36sp"
            android:textColor="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Player" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/score" />

            <TextView
                android:id="@+id/tvScore"
                android:textSize="36sp"
                android:textColor="@android:color/holo_orange_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/personal_best" />

            <TextView
                android:id="@+id/tvPersonalBest"
                android:textColor="@android:color/holo_green_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="TextView" />
        </LinearLayout>


        <TextView
            android:id="@+id/gameOverTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/game_over"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="48sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>