<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:textAlignment="center"
    tools:context=".flyingfish.GameOverActivity">

    <TextView
        android:id="@+id/gameOverTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/play_again_button_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOverTextId"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/play_again"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box_name"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/play_again_button_id">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:textColor="#000000"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tvName"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Player" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/box_score"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/box_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/score" />

        <TextView
            android:id="@+id/tvScore"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/box_best"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/box_score">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/personal_best" />

        <TextView
            android:id="@+id/tvPersonalBest"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/exit"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        />

</RelativeLayout>