<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="22dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/login"
                android:onClick="back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="22dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/setting"
                android:onClick="back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Welcome"
            android:textColor="#000000"
            android:textSize="45sp" />

        <Button
            android:id="@+id/playgame"
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/btn"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/game"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/personalrecord"
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/btn"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/record"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ranking"
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/btn"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/ranking"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Exit"
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/btn"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/chatbot"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="right"
            android:background="@drawable/style"
            android:src="@drawable/chatbot" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start"
        tools:ignore="MissingConstraints">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>